--- a/biostatistics.html
+++ b/biostatistics.html
@@ -79,7 +79,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -95,7 +95,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -175,11 +175,11 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatisitician-i-32173'>Biostatisitician I - Baylor Scott &amp; White Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatisitician-i-32173'>Biostatisitician I - Baylor Scott &amp; White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -191,7 +191,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Jul 5, 2019 ... Apply online for the job of Biostatistician at Statistics & Data Corporation (SDC)</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -258,11 +258,11 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-late-phase-home-based-eu-29895'>Principal Biostatistician - Late Phase - Home Based EU - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-late-phase-home-based-eu-29895'>Principal Biostatistician - Late Phase - Home Based EU - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://employment.redwoods.edu/postings/2757'>College of the Redwoods Portal | Instructional Support Specialist III - Biological Sciences at Pelican Bay State Prison</a></h5> 
+<h5><a href='https://employment.redwoods.edu/postings/2757'>College of the Redwoods Portal | Instructional Support Specialist III - Biological Sciences at Pelican Bay State Prison</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
@@ -274,7 +274,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/o5yQ9fwm'>Veristat Careers - Biostatistician II</a></h5> 
+<h5><a href='https://jobs.jobvite.com/veristat/job/o5yQ9fwm'>Veristat Careers - Biostatistician II</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -286,7 +286,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -348,7 +348,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oqViafwx'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oqViafwx'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
@@ -443,7 +443,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/56c7b602-5d75-4f64-adb6-bd138c84a8d9'>Ultragenyx Pharmaceutical Inc. - Sr. Manager/Manager, Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/ultragenyx/56c7b602-5d75-4f64-adb6-bd138c84a8d9'>Ultragenyx Pharmaceutical Inc. - Sr. Manager/Manager, Biostatistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
